# engineering-ode-simulator

./: .gitignore  AGENTS.md  CHANGELOG.md  PORTFOLIO_NOTES.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  streamlit_app.py
analysis/: export_utils.py  extended_kalman_filter.py  finite_difference.py  finite_element_1d.py  frequency_response.py  kalman_filter.py  lqr.py  model_predictive_control.py  motor_disturbance.py  parameter_sweep.py  particle_filter.py  pid_tuning.py  quadcopter_altitude_control.py  quadcopter_attitude_control.py  quadcopter_obstacle_avoidance.py  quadcopter_trajectory_tracking.py  quadcopter_waypoint_following.py  rlc_sweep.py  state_space.py  step_response.py  transfer_function.py  unscented_kalman_filter.py
backend/: __init__.py  main.py
benchmarks/: heat_2d_numba.py
docs/: architecture.md  control_systems.md  equations.md  fem_basics.md  future_ideas.md  numba-heat-acceleration.md  numerical_methods.md  pde_methods.md  state_estimation.md  theory_overview.md  uav_models.md
examples/: run_cooling.py  run_dc_motor.py  run_dc_motor_disturbance_rejection_comparison.py  run_dc_motor_open_loop_disturbance.py  run_discrete_pid_disturbance_response.py  run_discrete_pid_motor.py  run_ekf_pendulum.py  run_fem_1d_bar.py  run_finite_difference_convergence.py  run_finite_difference_derivatives.py  run_first_order_control.py  run_frequency_response_first_order.py  run_frequency_response_rlc.py  run_frequency_response_second_order.py  run_heat_equation_1d.py  run_heat_equation_2d.py  run_inverted_pendulum_animation_lqr.py  run_inverted_pendulum_animation_open_loop.py  run_inverted_pendulum_linearized.py  run_inverted_pendulum_lqr.py  run_inverted_pendulum_lqr_comparison.py  run_inverted_pendulum_open_loop.py  run_kalman_dc_motor.py  run_kalman_rlc.py  run_mass_spring_damper.py  run_motor_load_disturbance.py  run_mpc_double_integrator.py  run_particle_filter_pendulum.py  run_pendulum.py  run_pi_gain_sweep.py  run_pid_kd_tuning.py  run_pid_ki_tuning.py  run_pid_kp_tuning.py  run_pid_motor_control.py  run_pid_p_pi_pid_comparison.py  run_quadcopter_6dof_hover.py  run_quadcopter_6dof_tilted_thrust.py  run_quadcopter_6dof_torque_response.py  run_quadcopter_altitude_open_loop.py  run_quadcopter_altitude_pid.py  (+28 more)
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
models/: cooling.py  dc_motor.py  discrete_pid.py  first_order_control.py  heat_acceleration.py  heat_equation_1d.py  heat_equation_2d.py  inverted_pendulum.py  inverted_pendulum_lqr.py  mass_spring_damper.py  pendulum.py  (+10 more)
(+143 files in other folders)
