[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "engineering-simulation-toolkit"
version = "0.1.0"
description = "Educational engineering simulation toolkit for control, numerical methods, PDEs, FEM basics, UAV dynamics, and visualization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "scipy>=1.10",
    "streamlit>=1.30",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
    "httpx2>=0.1",
    "pytest>=8",
    "ruff>=0.4",
]

[tool.setuptools]
packages = [
    "analysis",
    "backend",
    "backend.api",
    "backend.core",
    "backend.schemas",
    "backend.services",
    "models",
    "visualization",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
